[package]
name = "concurrent_dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
reqwest = { version = "0.11.4", features = ["json"] }
futures = "0.3.8"
futures-util = "0.3.15"
